<resources>
    <string name="app_name">IT STAR</string>
    <!--Misc texts-->
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\’t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="divider_or">OR</string>
    <string name="title_activity_settings">Settings</string>
    <string name="signup_btn_label">Signup</string>
    <string name="signup_title">Sign up</string>
    <!--Welcome messages-->
    <string name="splash_welcome_txt">Easiest way to\nfind the best product</string>
    <string name="login_welcome_txt">Hello there !\nWelcome Back</string>
    <string name="signup_welcome_txt">Hello there !\nWelcome to you</string>
    <string name="title_activity_maps">Map</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_subtext">Please type the otp which send to you earlier</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Full address</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with us</string>
    <string name="tagAdmin">Kindly enter your admin user id and password</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Setup profile</string>
    <string name="re_type_password">Number</string>
    <string name="your_name">Full Name</string>
    <string name="vpa">8847845697pp@paytm</string>
    <string name="payee">Prakash Majhi</string>
    <string name="transaction_description">For Order</string>
    <string name="amount">1.0</string>
    <string name="e_userid">User id</string>
    <string name="e_password">Password</string>
</resources>